--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <head></head>
 <body>
-
-This is HTML
-More changes!
+<h1>Header!</h1>
+<p>This is HTML</br></p>
+<p>More changes!</br></p>
+<p>Another paragraph</br></p>
 </body>
 </html>
 
